# bench-harness

./: .gitignore  Cargo.toml  README.md  config.toml
agent/: Cargo.toml
agent-interface/: Cargo.toml
agent-interface/src/: client.rs  lib.rs
agent/src/: main.rs
bench-harness/: Cargo.toml
bench-harness/src/: afl.rs  config.rs  firecracker.rs  main.rs  setup.rs  utils.rs  worker.rs
bench-harness/src/image_builder/: docker.rs  mod.rs  utils.rs
bench-harness/src/tasks/: lava.rs  libafl.rs  mod.rs
data/config/: afl_ghidra_bridge-tasks  afl_ghidra_bridge.toml  instrumentation-test-tasks  instrumentation-test.toml  lava-icicle-tasks  lava-qemu-tasks  lava-tasks  lava.toml.jinja  msp430-tasks  msp430.toml
data/fuzzing-rootfs/: Dockerfile
data/ghidra-rootfs/: Dockerfile  autologin.conf
data/metadata/: Keygenme_ppc.setup.ron  Keygenme_xtensa.setup.ron
