[package]
name = "agent"
version = "0.1.15"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
agent-interface = { path = "../agent-interface" }
linux-raw-sys = "0.1.2"
crossbeam-channel = "0.5.6"

[target.'cfg(target_os = "linux")'.dependencies]
vsock = "0.3.0"
nix = "0.25.0"
