[package]
name = "bench-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
crossbeam-channel = "0.5.6"
ctrlc = "3.2.3"
curl = "0.4.44"
csv = "1.1.6"
flate2 = "1.0.24"
indexmap = { version = "1.9.1", features = ["serde"] }
once_cell = "1.15.0"
parking_lot = "0.12.1"
pico-args = { version = "0.5.0", features = ["eq-separator"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tar = "0.4.38"
time = { version = "0.3.15", features = ["parsing", "formatting"] }
toml = "0.5.9"
tracing = { version = "0.1.36", default-features = false }
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["fmt", "env-filter", "ansi"] }
walkdir = "2.3.2"
xshell = "0.2.2"
minijinja = { version = "0.23.0", default-features = false, features = ["macros"]}
agent-interface = { path = "../agent-interface" }
agent = { path = "../agent" }
regex = { version = "1.6.0", default-features = false, features = ["std"] }
sha2 = "0.10.6"
ron = "0.8.0"
